start with draggin

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <h1>Hello</h1>
     <script src="./src/objects/shipParts/ShipPartTypes.js"></script>
     <script src="./src/objects/shipParts/connector1.js"></script>
+    <script src="./src/objects/shipParts/connector2.js"></script>
+    <script src="./src/objects/shipParts/engine1.js"></script>
     <script src="./src/util/createTiles.js"></script>
 
     <script src="./src/objects/shipTileMaps/shipTileMap1.js"></script>
     
     <script src="./src/util/drawShipTileMap.js"></script>
+    <script src="./src/util/drawOfferedShipTiles.js"></script>
 
 
     <script src="./src/stages/shipCreationStage.js"></script>
